<resources>
    <string name="app_name">Calculator</string>
    <string name="basic">Basic</string>
    <string name="about_author">About author</string>
    <string name="exit">Exit</string>
    <string name="advanced">Advanced</string>
    <string name="calculator">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="comma">.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="pm">+/-</string>
    <string name="equals">=</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="result">0</string>
    <string name="c_ce">C/CE</string>
    <string name="ac">AC</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="x_y">x^y</string>
    <string name="x_2">x^2</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="sqrt">sqrt</string>
    <string name="percent">%</string>
</resources>
