<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicActivity">

    <Button
        android:id="@+id/three_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/comma_button"
        app:layout_constraintEnd_toStartOf="@+id/equals_button"
        app:layout_constraintStart_toEndOf="@+id/two_button"
        app:layout_constraintTop_toBottomOf="@+id/six_button" />

    <Button
        android:id="@+id/comma_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/comma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equals_button"
        app:layout_constraintStart_toEndOf="@+id/zero_button"
        app:layout_constraintTop_toBottomOf="@+id/three_button" />

    <Button
        android:id="@+id/equals_button"
        android:layout_width="80dp"
        android:layout_height="200dp"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/three_button"
        app:layout_constraintTop_toBottomOf="@+id/plus_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/zero_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/comma_button"
        app:layout_constraintStart_toEndOf="@+id/pm_button"
        app:layout_constraintTop_toBottomOf="@+id/two_button" />

    <Button
        android:id="@+id/pm_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/pm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one_button" />

    <Button
        android:id="@+id/one_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/pm_button"
        app:layout_constraintEnd_toStartOf="@+id/two_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_button" />

    <Button
        android:id="@+id/two_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/zero_button"
        app:layout_constraintEnd_toStartOf="@+id/three_button"
        app:layout_constraintStart_toEndOf="@+id/one_button"
        app:layout_constraintTop_toBottomOf="@+id/five_button" />

    <Button
        android:id="@+id/six_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/three_button"
        app:layout_constraintEnd_toStartOf="@+id/plus_button"
        app:layout_constraintStart_toEndOf="@+id/five_button"
        app:layout_constraintTop_toBottomOf="@+id/nine_button" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/equals_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/six_button"
        app:layout_constraintTop_toBottomOf="@+id/minus_button" />

    <Button
        android:id="@+id/four_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/one_button"
        app:layout_constraintEnd_toStartOf="@+id/five_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven_button" />

    <Button
        android:id="@+id/five_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/two_button"
        app:layout_constraintEnd_toStartOf="@+id/six_button"
        app:layout_constraintStart_toEndOf="@+id/four_button"
        app:layout_constraintTop_toBottomOf="@+id/eight_button" />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/six_button"
        app:layout_constraintEnd_toStartOf="@+id/minus_button"
        app:layout_constraintStart_toEndOf="@+id/eight_button"
        app:layout_constraintTop_toBottomOf="@+id/multiply_button" />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/four_button"
        app:layout_constraintEnd_toStartOf="@+id/eight_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac_button" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/plus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nine_button"
        app:layout_constraintTop_toBottomOf="@+id/cce_button" />

    <Button
        android:id="@+id/eight_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/five_button"
        app:layout_constraintEnd_toStartOf="@+id/nine_button"
        app:layout_constraintStart_toEndOf="@+id/seven_button"
        app:layout_constraintTop_toBottomOf="@+id/divide_button" />

    <Button
        android:id="@+id/ac_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/ac"
        app:layout_constraintBottom_toTopOf="@+id/seven_button"
        app:layout_constraintEnd_toStartOf="@+id/divide_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/cce_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/c_ce"
        app:layout_constraintBottom_toTopOf="@+id/minus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiply_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/multiply"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/nine_button"
        app:layout_constraintEnd_toStartOf="@+id/cce_button"
        app:layout_constraintStart_toEndOf="@+id/divide_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/eight_button"
        app:layout_constraintEnd_toStartOf="@+id/multiply_button"
        app:layout_constraintStart_toEndOf="@+id/ac_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="358dp"
        android:layout_height="78dp"
        android:layout_marginTop="16dp"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>